# stacie

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  MANIFEST.in  README.md  code_of_conduct.html  devenv.nix  genindex.html  glossary.html  index.html  objects.inv  py-modindex.html  pyproject.toml  references.html  search.html  searchindex.js  tippy_doi_cache.json  tippy_wiki_cache.json
.github/: requirements-old.txt
.github/scripts/: extract-notes.sh
.github/workflows/: pytest.yaml  release.yaml
.pytest_cache/v/: execution_times
_modules/: index.html
_modules/stacie/: conditioning.html  cost.html  cutoff.html  dq.html  estimate.html  model.html  plot.html  spectrum.html  synthetic.html  utils.html
_sources/: index.md.txt
_sources/apidocs/: modules.rst.txt  stacie.conditioning.rst.txt  stacie.cost.rst.txt  stacie.cutoff.rst.txt  stacie.dq.rst.txt  stacie.estimate.rst.txt  stacie.model.rst.txt  stacie.plot.rst.txt  stacie.rst.txt  stacie.spectrum.rst.txt  stacie.synthetic.rst.txt  stacie.utils.rst.txt
_sources/development/: changelog.md.txt  index.md.txt  release.md.txt
_sources/examples/: cloud_cover.py.txt  index.md.txt  lj_thermal_conductivity.py.txt  surface_diffusion.py.txt  water_diffusivity.py.txt
_sources/getting_started/: cite.md.txt  installation.md.txt
_sources/preparing_inputs/: block_averages.md.txt  data_sufficiency.md.txt
_sources/properties/: diffusion_coefficient.md.txt  electrical_conductivity.md.txt
_static/tippy/: code_of_conduct.03972573-0d9d-41ec-b207-22ca7ef301e1.js  code_of_conduct.313d7432-7ee5-4efe-b7ab-6f63701110ee.js  code_of_conduct.33c8427b-bd4e-4ba9-a16f-3eaf0b0f0807.js  code_of_conduct.521aed4f-2a7f-4141-a88e-025e5fc910ed.js  code_of_conduct.6662c131-3e4e-430b-93c7-395c6ca7805c.js  code_of_conduct.88466646-9d64-475a-9de0-b3fc47c9b2c7.js  code_of_conduct.8e03dcf5-f90f-459c-ac75-5aa30ee5faf4.js  code_of_conduct.9408b7c8-4417-42cb-aa57-969921904513.js  code_of_conduct.a944bf5f-c727-4ea6-9a20-540b48f7dd79.js  code_of_conduct.d53fd475-4cef-40b4-badb-4ce9d67eb393.js  code_of_conduct.f8863af9-5170-4afd-8bf5-7e7d0072a3cf.js  glossary.092f5153-8d64-4204-a2cc-c8370e59b1dc.js  glossary.106c4200-04e2-4e73-b2b4-852ffd4583d2.js  glossary.61d79bc8-b89d-432f-9e2b-ccaa56e0fdca.js  glossary.75545206-0e44-40de-9673-f68f38e0dac4.js  glossary.93e5a00f-2381-4916-bd66-b632e1fbc6c4.js  glossary.a3dc8362-dd60-47df-b0b1-7ad3d04b7f5d.js  glossary.a471307d-7dae-4497-9356-8defeac98211.js  glossary.a64a34af-2cd4-4f8a-a0d7-a9afbf3f8290.js  glossary.c1d7ad6f-4bc7-4934-b9ed-502f220a5b88.js  glossary.d91c613c-0636-4a43-88ba-b6a70caeaa46.js  glossary.da007224-c9df-42d5-95f6-bfd56e7eadc9.js  index.2094cec0-ea6d-4715-bfda-ca672dd68a56.js  index.3567c0f8-04ab-411e-b765-64b1147a91ab.js  index.4452f8c7-1168-4078-82df-2d480139919a.js  index.555c8e7e-f137-4ef3-98b4-bf6f927d7800.js  references.02e3f53c-cb95-4527-9aa6-61a540cf5b9b.js  references.2d825bd7-eead-4a56-852d-c3dd4df438bb.js  references.46a9c6fe-6ac3-4405-854b-e580e1d95931.js  references.47326de1-8763-435b-a93b-3af9ebf1edfe.js  references.7427ca52-b226-4094-bda7-1a139aad5813.js  references.7a2c3b09-a69b-4d5a-ac28-c2a1f7187201.js  references.91fda14d-fab6-4b1a-87b0-6db184b0432f.js  references.bcd54fa3-297d-403b-9efc-23a76e8af059.js  references.c82a00a5-72e9-419b-8729-6d4ab4ef4ec8.js  references.d5d43d4f-8352-476d-a528-03e0173f384e.js  references.e937aaaa-fd27-4358-b362-8c41d2cb07ae.js
apidocs/: modules.html  stacie.conditioning.html  stacie.cost.html  stacie.cutoff.html  stacie.dq.html  stacie.estimate.html  stacie.html  stacie.model.html  stacie.plot.html  stacie.spectrum.html  stacie.synthetic.html  stacie.utils.html
development/: changelog.html  contributing.html  index.html  release.html  setup.html
docs/: Makefile  clean.sh  compile_html.sh  compile_pdf.sh
docs/data/: .gitignore  .zenodo-record-id.txt  .zenodo-versions.json  README.md  README.typ  download_outputs.sh  plan.py  upload_outputs.sh  zenodo.md  zenodo.yaml
docs/source/: code_of_conduct.md  conf.py  development.md  glossary.md  index.md  licenses.md  macros.txt  references.bib  usage.md
examples/: applicability.html  cloud_cover.html  dq.html  error_mean.html  index.html  lj_bulk_viscosity.html  lj_shear_viscosity.html  lj_thermal_conductivity.html  minimal.html  molten_salt.html  surface_diffusion.html  utils.html  water_diffusivity.html
getting_started/: cite.html  index.html  installation.html  licenses.html  usage.html
preparing_inputs/: block_averages.html  data_sufficiency.html  index.html  molecular_dynamics.html
properties/: autocorrelation_time.html  bulk_viscosity.html  diffusion_coefficient.html  electrical_conductivity.html  error_estimates.html  index.html  shear_viscosity.html  thermal_conductivity.html
src/stacie/: __init__.py  conditioning.py  cost.py  cutobj.py  cutoff.py  dq.py  estimate.py  model.py  msgpack.py  plot.py  qgq.py  riskmetric.py  rpi.py  spectrum.py  summary.py  synthetic.py  utils.py  zarr.py
tests/: conftest.py  spectrum_30.npy  spectrum_36.npy  spectrum_ref.npy  test_conditioning.py  test_cost.py  test_cutoff.py  test_dq.py  test_estimate.py  test_model.py  test_msgpack.py  test_qgq.py  test_regression.py  test_rpi.py  test_spectrum.py  test_synthetic.py  test_utils.py  test_zarr.py
tests/_regtest_outputs/: test_regression.test_case_noscan[broad-model2-0.01].out  test_regression.test_case_noscan[broad-model3-0.1].out  test_regression.test_case_noscan[double-model6-0.02].out  test_regression.test_case_noscan[double-model7-0.02].out  test_regression.test_case_noscan[pure-model4-0.02].out  test_regression.test_case_noscan[pure-model5-0.02].out  test_regression.test_case_noscan[white-model0-0.1].out  test_regression.test_case_noscan[white-model1-0.1].out  test_regression.test_case_scan[False-criterion0-broad-model2-0.01].out  (+116 more)
tests/inputs/: spectrum_broad.nmpk.xz  (+11 more)
theory/: cutoff.html  index.html  model.html  notation.html  overview.html  statistics.html
tools/: README.md  gensynth.py  ptens.py  quick.py
(+1026 files in other folders)
