[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stacie"
authors = [
  { name="Toon Verstraelen", email="toon.verstraelen@ugent.be" },
]
description = "STable AutoCorrelation Integral Estimator"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Ensure changes to these dependencies are reflected in .github/requirements-old.txt
    "attrs>=21.3.0",
    "cattrs>=22.2.0",
    "matplotlib>=3.7.0",
    "msgpack>=1.0.3",
    "numpy>=1.23.3",
    "path>=16.14.0",
    "scipy>=1.11.1",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "furo",
    "intersphinx-registry",
    "jupyter",
    "jupyter-cache",
    "jupytext",
    "mdtraj",
    "myst-nb",
    "myst-parser",
    "nglview",
    "numpydoc",
    "openmm>=8.0",
    "packaging",
    "pandas",
    "setuptools_scm",
    "sphinx",
    "sphinx_autodoc_typehints",
    "sphinx-codeautolink",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-svg2pdfconverter",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "stepup>=2.1.4",
    "stepup-reprep>=2.3.3",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-regtest",
    "pytest-xdist",
    "numdifftools",
]
tools = [
    "celerite2",
]

[project.urls]
Documentation = "https://molmod.github.io/stacie/"
Issues = "https://github.com/molmod/stacie/issues/"
Source = "https://github.com/molmod/stacie/"

[tool.pytest.ini_options]
addopts = "-n auto -W error"

[tool.setuptools_scm]
write_to = "src/stacie/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "A", "B", "BLE", "C4", "E", "EXE", "F", "I", "ICN", "ISC", "N", "NPY", "PERF", "PIE",
    "PL", "PT", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TRY", "UP", "W"
]
ignore = [
    "ISC001",  # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
    "PLR0904",  # https://docs.astral.sh/ruff/rules/too-many-public-methods/
    "PLR0911",  # https://docs.astral.sh/ruff/rules/too-many-return-statements/
    "PLR0912",  # https://docs.astral.sh/ruff/rules/too-many-branches/
    "PLR0913",  # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "PLR0914",  # https://docs.astral.sh/ruff/rules/too-many-locals/
    "PLR0915",  # https://docs.astral.sh/ruff/rules/too-many-statements/
    "PLR0916",  # https://docs.astral.sh/ruff/rules/too-many-boolean-expressions/
    "PLR0917",  # https://docs.astral.sh/ruff/rules/too-many-positional/
    "PLR2004",  # https://docs.astral.sh/ruff/rules/magic-value-comparison/
    "PT011",  # https://docs.astral.sh/ruff/rules/pytest-raises-too-broad/
    "RUF001",  # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-string/
    "TRY003",  # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
]
